Reconnected the application to a new database. Published the site to a IIS server in windows 10. Fixed some of the overflow-x issues with body and html.

--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -128,6 +128,7 @@ a {
 
 .newly_released_char_table {
     margin: auto;
+    max-width:50%;
 }
 
 .newly_released_char_table_row {
@@ -328,8 +329,13 @@ body {
 ----------------------------------------------- */
 
 @media(max-width:1150px){
+    body, html {
+        max-width: 100%;
+        overflow-x: hidden;
+    }
+
     .front_part{
-        height:500px;
+
     }
 
     .front_part_welcome_text, .front_part_quote_2, .front_part_quote_3{
@@ -355,9 +361,53 @@ body {
 
 }
 
-@media(max-width:770px){
+@media(max-width:770px) {
+
+
+    body, html {
+        max-width: 100%;
+        overflow-x: hidden;
+    }
+
     .lightbox_table img {
         width: auto;
-        max-height: 60px;
+        max-height: 50px;
+    }
+
+    .newly_released_char_table {
+        margin: auto;
+        max-width: 80%;
+    }
+
+    .front_part_welcome_text {
+        padding-top: 150%;
+    }
+
+    /* Newly released characters
+    ----------------------------------------------------*/
+
+    .newly_released_char_text_wrap {
+        width: 100%;
+        margin-left: 0;
+    }
+
+        .newly_released_char_text_wrap span {
+            font-size: 15px;
+        }
+
+
+    .form-add-chara {
+        width: 100%;
+    }
+
+    .wrap-add-character-form h1 {
+        width: 100%;
+    }
+}
+@media(max-width:510px){
+
+    .lightbox_table img {
+        width: auto;
+        max-height: 30px;
     }
 }
